--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "bootstrap": "4.6",
+    "sass": "1.60.0"
   }
 }
